// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`junction emission snapshot — opportunity_contact (clean-lite-ps) emits opportunity_contact.entity.ts 1`] = `
"import {
  boolean,
  numeric,
  pgEnum,
  pgTable,
  primaryKey,
  text,
  timestamp,
  uuid,
} from 'drizzle-orm/pg-core';
import { relations, type InferSelectModel } from 'drizzle-orm';
import { opportunities } from '../opportunities/opportunity.entity';
import { contacts } from '../contacts/contact.entity';

// ============================================================================
// Enums
// ============================================================================

export const opportunityContactRoleEnum = pgEnum('opportunity_contact_role', [
  'champion',
  'decision_maker',
  'influencer',
]);

// ============================================================================
// Table
// ============================================================================

export const opportunityContacts = pgTable(
  'opportunity_contacts',
  {
    // FK columns — composite primary key (no surrogate id: Q4 resolution)
    opportunityId: uuid('opportunity_id').notNull().references(() => opportunities.id, { onDelete: 'restrict' }),
    contactId: uuid('contact_id').notNull().references(() => contacts.id, { onDelete: 'restrict' }),

    // Role enum (per-pairing; declared in junction YAML's fields.role.choices)
    role: opportunityContactRoleEnum('role'),

    // BaseJunctionFields — is_primary is always emitted
    isPrimary: boolean('is_primary').notNull().default(false),

    // Temporal window (temporal: true, default)
    startedAt: timestamp('started_at'),
    endedAt: timestamp('ended_at'),

    // Provenance (sourced: true, default)
    sourcedFrom: text('sourced_from'),
    confidence: numeric('confidence', { precision: 5, scale: 4 }),
    matchedAt: timestamp('matched_at'),

    // Timestamps
    createdAt: timestamp('created_at').notNull().defaultNow(),
    updatedAt: timestamp('updated_at').notNull().defaultNow(),
  },
  (table) => [
    // Composite primary key on the two FK columns (Q4 resolution: no surrogate id)
    primaryKey({ columns: [table.opportunityId, table.contactId] }),
  ],
);

export type OpportunityContact = InferSelectModel<typeof opportunityContacts>;
export type OpportunityContactInsert = typeof opportunityContacts.$inferInsert;

// ============================================================================
// Relations — extension-path metadata for db.query.X.findMany({ with: ... })
// Generated code does NOT consume these; they exist for hand-written admin
// queries and for #60's fan-out methods once they land.
// ============================================================================

export const opportunityContactsRelations = relations(opportunityContacts, ({ one }) => ({
  opportunity: one(opportunities, {
    fields: [opportunityContacts.opportunityId],
    references: [opportunities.id],
  }),
  contact: one(contacts, {
    fields: [opportunityContacts.contactId],
    references: [contacts.id],
  }),
}));
"
`;

exports[`junction emission snapshot — opportunity_contact (clean-lite-ps) emits opportunity_contact.repository.ts 1`] = `
"import { Injectable, Inject } from '@nestjs/common';
import { eq } from 'drizzle-orm';
import { DRIZZLE } from '@shared/constants/tokens';
import type { DrizzleClient } from '@shared/types/drizzle';
import { BaseRepository } from '@shared/base-classes/base-repository';
import { opportunityContacts, type OpportunityContact } from './opportunity_contact.entity';

@Injectable()
export class OpportunityContactRepository extends BaseRepository<OpportunityContact> {
  readonly table = opportunityContacts;

  // Junctions track temporal validity via started_at / ended_at, NOT via
  // deleted_at. is_primary flips replace soft-delete semantics (Q5 resolution).
  protected override readonly behaviors = {
    timestamps: true,
    softDelete: false,
    userTracking: false,
  };

  constructor(@Inject(DRIZZLE) db: DrizzleClient) {
    super(db);
  }

  // ═══════════════════════════════════════════════════════════════════════════
  // Pairing-aware finders — hardcoded in v1 (Q2 resolution: no declarative
  // queries block on junctions; every junction needs exactly these two methods).
  // ═══════════════════════════════════════════════════════════════════════════

  /**
   * Fetch all junction rows where opportunity_id matches.
   *
   * Pagination shape: { cursor?, limit? } — canonical per cgp-62 r4.
   * FIXME: align with codegen-patterns#358 pagination shape if it diverges.
   */
  async findByOpportunityId(
    opportunityId: string,
    opts?: { cursor?: string; limit?: number },
  ): Promise<OpportunityContact[]> {
    const rows = await this.baseQuery()
      .where(eq(this.table.opportunityId, opportunityId))
      .limit(opts?.limit ?? 100);
    return rows as OpportunityContact[];
  }

  /**
   * Fetch all junction rows where contact_id matches.
   *
   * Pagination shape: { cursor?, limit? } — canonical per cgp-62 r4.
   * FIXME: align with codegen-patterns#358 pagination shape if it diverges.
   */
  async findByContactId(
    contactId: string,
    opts?: { cursor?: string; limit?: number },
  ): Promise<OpportunityContact[]> {
    const rows = await this.baseQuery()
      .where(eq(this.table.contactId, contactId))
      .limit(opts?.limit ?? 100);
    return rows as OpportunityContact[];
  }

  // Inherited from BaseRepository:
  //   findById, findByIds, list, count, exists, create, update, delete, upsertMany
}
"
`;

exports[`junction emission snapshot — opportunity_contact (clean-lite-ps) emits opportunity_contact.service.ts 1`] = `
"import { Injectable, Inject, Optional } from '@nestjs/common';
import { WithAnalytics } from '@shared/base-classes/with-analytics';
import { EVENT_BUS } from '@shared/constants/tokens';
import { BaseService } from '@shared/base-classes/base-service';
import { OpportunityContactRepository } from './opportunity_contact.repository';
import type { OpportunityContact } from './opportunity_contact.entity';

@Injectable()
export class OpportunityContactService extends WithAnalytics(
  BaseService<OpportunityContactRepository, OpportunityContact>,
) {
  protected override readonly entityName = 'opportunity_contact';

  /** Injected by NestJS when EventsModule is registered. */
  @Optional() @Inject(EVENT_BUS)
  protected override eventBus: any = undefined;

  constructor(protected override readonly repository: OpportunityContactRepository) {
    super(repository);
  }

  // Pairing-aware pass-throughs — mirror the repo's two finders so use-cases
  // and #60's fan-out methods both delegate through the service layer, keeping
  // analytics/events instrumentation uniform (per relationship's service.ejs.t).

  /**
   * Fetch all junction rows for a given opportunity_id.
   *
   * FIXME: align with codegen-patterns#358 pagination shape if it diverges.
   */
  async findByOpportunityId(
    opportunityId: string,
    opts?: { cursor?: string; limit?: number },
  ): Promise<OpportunityContact[]> {
    return this.repository.findByOpportunityId(opportunityId, opts);
  }

  /**
   * Fetch all junction rows for a given contact_id.
   *
   * FIXME: align with codegen-patterns#358 pagination shape if it diverges.
   */
  async findByContactId(
    contactId: string,
    opts?: { cursor?: string; limit?: number },
  ): Promise<OpportunityContact[]> {
    return this.repository.findByContactId(contactId, opts);
  }

  // ─────────────────────────────────────────────────────────────────────────
  // Fan-out association methods (attach/detach/list/setPrimary) are NOT
  // emitted here. They land via junction-association-codegen
  // (pattern-stack/dealbrain-integrations#60) once
  // pattern-stack/codegen-patterns#358 establishes the service-method
  // emission machinery.
  //
  // Until #60 lands, consumers hand-write fan-out methods in their own
  // service files against the canonical shape documented in
  // .ai-docs/stacks/codegen-app-patterns/specs/cgp-62.md (see
  // architectural_notes.cross_entity_access.canonical_shape in the stack
  // plan). The hand-written methods are the executable spec for #60.
  // ─────────────────────────────────────────────────────────────────────────

  // Inherited from BaseService:
  //   findById, findByIds, list, count, exists, create, update, delete
}
"
`;

exports[`junction emission snapshot — opportunity_contact (clean-lite-ps) emits opportunity.service.ts (left parent — junction accessor) 1`] = `
"import { Injectable, Inject, Optional } from '@nestjs/common';
import { WithAnalytics } from '@shared/base-classes/with-analytics';
import { EVENT_BUS } from '@shared/constants/tokens';
import { SyncedEntityService } from '@shared/base-classes/synced-entity-service';
import { OpportunityRepository } from './opportunity.repository';
import type { Opportunity } from './opportunity.entity';

@Injectable()
export class OpportunityService extends WithAnalytics(
  SyncedEntityService<OpportunityRepository, Opportunity>,
) {
  protected override readonly entityName = 'opportunity';

  /** Injected by NestJS when EventsModule is registered. */
  @Optional() @Inject(EVENT_BUS)
  protected override eventBus: any = undefined;

  constructor(
    protected override readonly repository: OpportunityRepository,
  ) {
    super(repository);
  }

  // Lifecycle events (created/updated/deleted + per-field changes) are emitted
  // automatically by BaseService when the events subsystem is installed.
  //
  // Inherited from SyncedEntityService:
  //   findById, findByIds, list, count, exists, create, update, delete
  //   findByExternalId, findAllByUserId, findVisibleByUserId



}
"
`;

exports[`junction emission snapshot — opportunity_contact (clean-lite-ps) emits contact.service.ts (right parent — junction accessor) 1`] = `
"import { Injectable, Inject, Optional } from '@nestjs/common';
import { WithAnalytics } from '@shared/base-classes/with-analytics';
import { EVENT_BUS } from '@shared/constants/tokens';
import { SyncedEntityService } from '@shared/base-classes/synced-entity-service';
import { ContactRepository } from './contact.repository';
import type { Contact } from './contact.entity';

@Injectable()
export class ContactService extends WithAnalytics(
  SyncedEntityService<ContactRepository, Contact>,
) {
  protected override readonly entityName = 'contact';

  /** Injected by NestJS when EventsModule is registered. */
  @Optional() @Inject(EVENT_BUS)
  protected override eventBus: any = undefined;

  constructor(
    protected override readonly repository: ContactRepository,
  ) {
    super(repository);
  }

  // Lifecycle events (created/updated/deleted + per-field changes) are emitted
  // automatically by BaseService when the events subsystem is installed.
  //
  // Inherited from SyncedEntityService:
  //   findById, findByIds, list, count, exists, create, update, delete
  //   findByExternalId, findAllByUserId, findVisibleByUserId



}
"
`;
